# codedna

./: .gitignore  CHANGELOG.md  README.md  benchmark.py  conflict.txt  fix_bolt.py  fix_bolt.sh  fix_conflict.py  fix_deps.py  fix_ee.py  fix_security.py  fix_smells.py  package-lock.json  patch.py  patch_bolt.diff  patch_bolt.py  patch_bolt2.diff  patch_structure.py  print_res.py  pyproject.toml  resolve_conflict3.sh  resolve_conflict4.sh  resolve_conflicts.py  resolver2.py  resolver5.py  run_test.py  submission.md  test_arch.py  test_deps.py  test_git.py  test_imports.py  test_imports_individual.py  test_lang.py  test_lazy_imports.py  test_perf.py  test_perf2.py  test_perf3.py  update_security_detector.py
.jules/: _cycle_state.json  bolt.md  flaky_history.json  sentinel.md  warden.md
codedna/: __init__.py  cli.py
prof/: combined.prof  test_analyze_github_url.prof  test_analyze_local.prof  test_analyze_structure.prof  test_calculates_percentage.prof  test_count_methods_edge_cases[    async def my_async_func()__n        pass-.py-0].prof  test_count_methods_edge_cases[    def foo()_-.txt-0].prof  test_count_methods_edge_cases[    def foo()__n        pass-.py-1].prof  test_count_methods_edge_cases[    def func1()_ pass_n_n    def func2()_ pass-.py-2].prof  test_count_methods_edge_cases[-.py-0].prof  test_count_methods_edge_cases[class A__n    def method(self)__n        pass-.py-1].prof  test_count_methods_edge_cases[class MyClass { myMethod() {} }-.jsx-1].prof  test_count_methods_edge_cases[const arrowFunc = () =_ {}-.ts-1].prof  test_count_methods_java.prof  (+34 more)
(+42 files in other folders)
