[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codedna"
version = "1.0.4"
description = "🧬 A genetic analyzer for software — reverse-engineer any codebase into a DNA profile."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "shenald-dev", email = "shenald@example.com"}
]
keywords = ["code-analysis", "architecture", "dependency-graph", "software-intelligence", "dna"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.40",
    "networkx>=3.2",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
ai = [
    "openai>=1.0.0",
]

[project.scripts]
codedna = "codedna.cli:main"

[tool.setuptools.packages.find]
include = ["codedna*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
